packages/lustre-v6.6.103.3/test/should_fail/semantics/bad_call01.lus

node toto = titi;
node titi = toto;

node bad_call01(x,y : bool) returns (z : bool);
let
	z = toto(x,y);
tel

